--- a/translations/kangyur/placeholders/091-064_toh667-the_tantra_of_mahakala.xml
+++ b/translations/kangyur/placeholders/091-064_toh667-the_tantra_of_mahakala.xml
@@ -19,12 +19,12 @@
                 <editor role="projectEditor" xml:id="UT22084-091-064-34">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.13 <date>2023</date>
+                <edition>v 0.1.14 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-091-064"/>
                 <date/>
             </publicationStmt>
@@ -105,6 +105,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-05T07:37:45.65Z" type="text-version" status="0.1.13" xml:id="UT22084-091-064-37">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-06T09:16:54.69Z" type="translation-status" status="2.a" xml:id="UT22084-091-064-38">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-06T09:16:54.69Z" type="text-version" status="0.1.14" xml:id="UT22084-091-064-39">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
