--- a/translations/kangyur/placeholders/091-065_toh668,1085-the_incantation_of_mahakala.xml
+++ b/translations/kangyur/placeholders/091-065_toh668,1085-the_incantation_of_mahakala.xml
@@ -19,12 +19,12 @@
                 <editor role="projectEditor" xml:id="UT22084-091-065-34">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.13 <date>2023</date>
+                <edition>v 0.1.14 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-091-065"/>
                 <date/>
             </publicationStmt>
@@ -114,6 +114,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-05T07:40:20.436Z" type="text-version" status="0.1.13" xml:id="UT22084-091-065-37">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-06T09:18:00.133Z" type="translation-status" status="2.a" xml:id="UT22084-091-065-38">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-06T09:18:00.133Z" type="text-version" status="0.1.14" xml:id="UT22084-091-065-39">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
