--- a/translations/kangyur/placeholders/091-031_toh634,874-the_incantation_of_the_one_hundred_and_eight_names_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/091-031_toh634,874-the_incantation_of_the_one_hundred_and_eight_names_of_avalokitesvara.xml
@@ -17,10 +17,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāvalokiteśvarāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-091-031"/>
                 <date/>
             </publicationStmt>
@@ -44,9 +45,24 @@
                     <idno source-id="O1JC114941JC12636" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-20T13:53:36.244Z" user="admin">20/07/2023 13:53:36</note>    <note type="updated" update="translation-status" value="4" date-time="2023-07-20T13:53:31.931Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-07-20T13:53:31.931Z" user="line-tofte">0.0.1</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2023-07-20T13:53:31.931Z" type="translation-status" status="4" xml:id="UT22084-091-031-1">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-20T13:53:31.931Z" type="text-version" status="0.0.1" xml:id="UT22084-091-031-2">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-091-031-3">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-06T10:11:47.927Z" type="translation-status" status="3" xml:id="UT22084-091-031-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-06T10:11:47.927Z" type="text-version" status="0.0.3" xml:id="UT22084-091-031-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
