--- a/translations/kangyur/placeholders/094-020_toh743,1009-the_incantation_that_cleanses_all_the_obscurations_of_karma.xml
+++ b/translations/kangyur/placeholders/094-020_toh743,1009-the_incantation_that_cleanses_all_the_obscurations_of_karma.xml
@@ -4,19 +4,22 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">las sgrib thams cad rnam par sbyong ba'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">sarvakarmāvaraṇaviśodhanī dhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī that Cleanses All the Obscurations of Karma</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa las kyi sgrib pa thams cad rnam par sbyong ba zhes bya ba'i gzungs/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">sarvakarmāvaraṇaviśodhanī dhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">las sgrib thams cad rnam par sbyong ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasarva­karmāvaraṇaviśodhanī­nāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa las kyi sgrib pa thams cad rnam par sbyong ba zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryasarva­karmāvaraṇaviśodhanī­nāmadhāraṇī</title>
+                <author role="translatorMain" xml:id="UT22084-094-020-1"/>
+                <consultant role="projectManager" xml:id="UT22084-094-020-2">Péter-Dániel Szántó</consultant>
+                <author role="translatorEng" xml:id="UT22084-094-020-3">Gergely Hidas</author>
+                <author role="translatorEng" xml:id="UT22084-094-020-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-094-020"/>
                 <date/>
             </publicationStmt>
@@ -40,9 +43,36 @@
                     <idno source-id="O1JC114941JC12772" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-24T12:08:37.051Z" user="admin">24/07/2023 12:08:37</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:39:14.129Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:39:14.129Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-24T12:08:32.796Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-07-24T12:08:32.796Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2023-06-30T11:39:14.129Z" type="translation-status" status="4" xml:id="UT22084-094-020-5">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-30T11:39:14.129Z" type="text-version" status="0.0.1" xml:id="UT22084-094-020-6">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T12:08:32.796Z" type="translation-status" status="3" xml:id="UT22084-094-020-7">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T12:08:32.796Z" type="text-version" status="0.0.2" xml:id="UT22084-094-020-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T12:09:00.814Z" type="text-version" status="0.0.3" xml:id="UT22084-094-020-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T12:09:24.047Z" type="text-version" status="0.0.4" xml:id="UT22084-094-020-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-094-020-11">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-06T12:31:48.137Z" type="translation-status" status="2.g" xml:id="UT22084-094-020-12">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-06T12:31:48.137Z" type="text-version" status="0.0.6" xml:id="UT22084-094-020-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
