--- a/translations/kangyur/placeholders/088-035_toh540,1078-the_incantation_of_surupa.xml
+++ b/translations/kangyur/placeholders/088-035_toh540,1078-the_incantation_of_surupa.xml
@@ -4,19 +4,22 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">su rU pa'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">surūpadhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of Surūpa</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">su rU pa zhes bya ba'i gzungs/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">surūpadhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">su rU pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">surūpanāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">su rU pa zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">surūpanāmadhāraṇī</title>
+                <author role="translatorMain" xml:id="UT22084-088-035-1"/>
+                <author role="translatorEng" xml:id="UT22084-088-035-2">Gergely Hidas</author>
+                <consultant role="projectManager" xml:id="UT22084-088-035-3">Péter-Dániel Szántó</consultant>
+                <author role="translatorEng" xml:id="UT22084-088-035-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.7 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-088-035"/>
                 <date/>
             </publicationStmt>
@@ -40,9 +43,39 @@
                     <idno source-id="O1JC114941JC12842" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-24T11:17:48.29Z" user="admin">24/07/2023 11:17:48</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:26:45.223Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:26:45.223Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-07-24T11:17:44.038Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-07-24T11:17:44.038Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2023-06-30T11:26:45.223Z" type="translation-status" status="4" xml:id="UT22084-088-035-5">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-30T11:26:45.223Z" type="text-version" status="0.0.1" xml:id="UT22084-088-035-6">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T11:17:44.038Z" type="translation-status" status="3" xml:id="UT22084-088-035-7">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T11:17:44.038Z" type="text-version" status="0.0.2" xml:id="UT22084-088-035-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T11:18:12.112Z" type="text-version" status="0.0.3" xml:id="UT22084-088-035-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T11:18:29.57Z" type="text-version" status="0.0.4" xml:id="UT22084-088-035-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-24T11:21:52.191Z" type="text-version" status="0.0.5" xml:id="UT22084-088-035-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT22084-088-035-12">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-06T12:38:47.222Z" type="translation-status" status="2.g" xml:id="UT22084-088-035-13">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-06T12:38:47.222Z" type="text-version" status="0.0.7" xml:id="UT22084-088-035-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
