--- a/translations/kangyur/placeholders/103-002_toh4568-1-chapter_1_how_the_wheel_of_dharma_was_turned_and_history_of_the_compilation_of_the_teachings.xml
+++ b/translations/kangyur/placeholders/103-002_toh4568-1-chapter_1_how_the_wheel_of_dharma_was_turned_and_history_of_the_compilation_of_the_teachings.xml
@@ -7,13 +7,14 @@
                 <title type="mainTitle" xml:lang="en">Chapter 1: How the Wheel of Dharma was Turned, and History of the Compilation of the Teachings</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">dang po/ chos kyi 'khor lo bskor tshul bka' bsdu'i byung ba dang bcas pa legs par bshad pa'i yal 'dab/</title>
                 <title type="otherTitle" xml:lang="zh">德格版甘珠爾經文目錄：第一章 有關法輪是如何轉動，以及佛陀言教之歷史的解釋</title>
-                <sponsor ref="eft:sponsor-219">Chan Wing Fai, Lam Wai Ling, Chan Oi Yi, Chan Tung Mei, Chan Yu Ka, Chan Sui Li, Chan Ya Ho, Chan Yu Lin, Zhong Sheng jian, Lin Miao Jun</sponsor>
+                <sponsor xml:id="UT22084-103-002-2">Chan Wing Fai, Lam Wai Ling, Chan Oi Yi, Chan Tung Mei, Chan Yu Ka, Chan Sui Li, Chan Ya Ho, Chan Yu Lin, Zhong Sheng jian, Lin Miao Jun</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2021</date>
+                <edition>v 0.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-103-002"/>
             </publicationStmt>
             <sourceDesc>
@@ -27,15 +28,36 @@
                     <idno source-id="O1JC114941JC12883" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-04T13:36:47.27Z" user="cabie-sim">04/11/2022 13:36:47</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-10T16:46:03.1Z" user="amy">Auto (update-titles)</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-05T16:26:19.046Z" user="mike">summary added</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2021-12-24T05:47:56.516Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-06-13T04:55:08.239Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2022-07-26T07:48:46.389Z" user="cabie-sim">Auto (update-titles)</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2022-11-04T13:36:45.835Z" user="cabie-sim">Auto (update-sponsorship)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#amy" when="2021-05-10T16:46:03.1Z" type="text-version" status="0.0.1" xml:id="UT22084-103-002-3">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#mike" when="2021-07-05T16:26:19.046Z" type="text-version" status="0.0.2" xml:id="UT22084-103-002-4">
+                    <desc>summary added</desc>
+                </change>
+                <change who="#cabie-sim" when="2021-12-24T05:47:56.516Z" type="text-version" status="0.0.3" xml:id="UT22084-103-002-5">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-06-13T04:55:08.239Z" type="text-version" status="0.0.4" xml:id="UT22084-103-002-6">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-07-26T07:48:46.389Z" type="text-version" status="0.0.5" xml:id="UT22084-103-002-7">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-11-04T13:36:45.835Z" type="text-version" status="0.0.6" xml:id="UT22084-103-002-8">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.7" xml:id="UT22084-103-002-9">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-07T07:24:55.695Z" type="translation-status" status="3" xml:id="UT22084-103-002-10">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-07T07:24:55.695Z" type="text-version" status="0.0.8" xml:id="UT22084-103-002-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
