--- a/translations/kangyur/placeholders/067-001_toh262-the_five_thousand_four_hundred_and_fiftythree_names_of_the_buddha.xml
+++ b/translations/kangyur/placeholders/067-001_toh262-the_five_thousand_four_hundred_and_fiftythree_names_of_the_buddha.xml
@@ -8,13 +8,14 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">buddhanāmasahasrapañca­śatacaturtripañcadaśa</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas kyi mtshan lnga stong bzhi brgya lnga bcu rtsa gsum pa/</title>
                 <title type="otherTitle" xml:lang="zh">《五千四百五十三佛名》（大正藏：《五千五百佛名神呪除障滅罪經》）</title>
-                <sponsor ref="eft:sponsor-197">Joseph Tse and Patricia Tse and family, Wai Ling Tse (張惠玲), late Kwok Ying Tse(謝國英); Shu Chiao Lin (林淑嬌) and Family, late Chung Yuen Chow(鄒宗源)</sponsor>
+                <sponsor xml:id="UT22084-067-001-1">Joseph Tse and Patricia Tse and family, Wai Ling Tse (張惠玲), late Kwok Ying Tse(謝國英); Shu Chiao Lin (林淑嬌) and Family, late Chung Yuen Chow(鄒宗源)</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date/>
+                <edition>v 0.0.9 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-067-001"/>
             </publicationStmt>
             <sourceDesc>
@@ -28,16 +29,39 @@
                     <idno source-id="O1JC114941JC11917" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T07:12:03.062Z" user="admin">26/07/2022 07:12:03</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-10T13:34:20.106Z" user="amy">Auto (update-titles)</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-10T16:46:23.095Z" user="amy">Auto (update-titles)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-21T14:05:38.802Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2021-06-15T02:33:08.669Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2022-01-03T05:09:55.499Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2022-01-03T05:10:39.006Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2022-07-26T07:12:01.07Z" user="cabie-sim">Auto (update-titles)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#amy" when="2021-05-10T13:34:20.106Z" type="text-version" status="0.0.1" xml:id="UT22084-067-001-2">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#amy" when="2021-05-10T16:46:23.095Z" type="text-version" status="0.0.2" xml:id="UT22084-067-001-3">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#cabie-sim" when="2021-05-21T14:05:38.802Z" type="text-version" status="0.0.3" xml:id="UT22084-067-001-4">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2021-06-15T02:33:08.669Z" type="text-version" status="0.0.4" xml:id="UT22084-067-001-5">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-01-03T05:09:55.499Z" type="text-version" status="0.0.5" xml:id="UT22084-067-001-6">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-01-03T05:10:39.006Z" type="text-version" status="0.0.6" xml:id="UT22084-067-001-7">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-07-26T07:12:01.07Z" type="text-version" status="0.0.7" xml:id="UT22084-067-001-8">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.8" xml:id="UT22084-067-001-9">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-07T07:33:48.351Z" type="translation-status" status="3" xml:id="UT22084-067-001-10">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-07T07:33:48.351Z" type="text-version" status="0.0.9" xml:id="UT22084-067-001-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
