--- a/translations/kangyur/placeholders/043-011_toh74-the_sutra_of_the_girl_sumatis_questions.xml
+++ b/translations/kangyur/placeholders/043-011_toh74-the_sutra_of_the_girl_sumatis_questions.xml
@@ -9,18 +9,19 @@
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Girl Sumati's Questions</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bu mo blo gros bzang mos zhus pa zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasumatidārikā­paripṛcchā­nāmamahāyānasūtra</title>
-                <author role="translatorMain" ref="contributors.xml#team-10"/>
-                <author role="translatorEng" ref="contributors.xml#person-80">Rebecca Hufen</author>
-                <consultant role="projectManager" ref="contributors.xml#person-80">Rebecca Hufen</consultant>
-                <consultant role="dharmaMaster" ref="contributors.xml#person-79">Raktrul Ngawang Kunga Rinpoche (Pema Dorjee)</consultant>
-                <editor role="reviser" ref="contributors.xml#person-81">Jason Sanche</editor>
+                <author role="translatorMain" xml:id="UT22084-043-011-1"/>
+                <author role="translatorEng" xml:id="UT22084-043-011-2">Rebecca Hufen</author>
+                <consultant role="projectManager" xml:id="UT22084-043-011-3">Rebecca Hufen</consultant>
+                <consultant role="dharmaMaster" xml:id="UT22084-043-011-4">Raktrul Ngawang Kunga Rinpoche (Pema Dorjee)</consultant>
+                <editor role="reviser" xml:id="UT22084-043-011-5">Jason Sanche</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2019</date>
+                <edition>v 0.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-043-011"/>
                 <date/>
             </publicationStmt>
@@ -35,17 +36,39 @@
                     <idno source-id="O1JC114941JC11614" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-08-06T12:39:29.987Z" user="admin">06/08/2021 12:39:29</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-<note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T12:59:18.801Z" user="mike">2.h</note>
-<note type="updated" update="translation-status" value="3" date-time="2020-03-09T07:06:42.687Z" user="andreas">3</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2021-08-06T12:33:55.121Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-08-06T12:33:55.121Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-08-06T12:37:56.415Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-08-06T12:39:25.021Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-043-011-6">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#mike" when="2020-01-27T12:59:18.801Z" type="translation-status" status="2.h" xml:id="UT22084-043-011-7">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#andreas" when="2020-03-09T07:06:42.687Z" type="translation-status" status="3" xml:id="UT22084-043-011-8">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2021-08-06T12:33:55.121Z" type="translation-status" status="2.h" xml:id="UT22084-043-011-9">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2021-08-06T12:33:55.121Z" type="text-version" status="0.0.2" xml:id="UT22084-043-011-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-08-06T12:37:56.415Z" type="text-version" status="0.0.3" xml:id="UT22084-043-011-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-08-06T12:39:25.021Z" type="text-version" status="0.0.4" xml:id="UT22084-043-011-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-043-011-13">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-07T13:36:42.5Z" type="translation-status" status="2.g" xml:id="UT22084-043-011-14">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-07T13:36:42.5Z" type="text-version" status="0.0.6" xml:id="UT22084-043-011-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
