--- a/translations/kangyur/placeholders/090-008_toh564,988-the_incantation_of_marici.xml
+++ b/translations/kangyur/placeholders/090-008_toh564,988-the_incantation_of_marici.xml
@@ -9,20 +9,21 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">'od zer can gyi gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamārīcīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags ma 'od zer can zhes bya ba'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-090-008-1"/>
+                <author role="translatorMain" xml:id="UT22084-090-008-1">Dharmachakra Translation Committee</author>
                 <author role="translatorEng" xml:id="UT22084-090-008-2">Adam Krug</author>
                 <consultant role="projectManager" xml:id="UT22084-090-008-3">Andreas Doctor</consultant>
                 <consultant role="dharmaMaster" xml:id="UT22084-090-008-4">Chokyi Nyima Rinpoche</consultant>
                 <editor role="projectEditor" xml:id="UT22084-090-008-5">Nathaniel Rich</editor>
                 <editor role="copyEditor" xml:id="UT22084-090-008-6">Laura Goetz</editor>
+                <editor role="projectEditor" xml:id="UT22084-090-008-31">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2023</date>
+                <edition>v 0.0.14 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-090-008"/>
                 <date/>
             </publicationStmt>
@@ -100,6 +101,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-31T14:02:31.838Z" type="text-version" status="0.0.12" xml:id="UT22084-090-008-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-01T08:15:23.572Z" type="text-version" status="0.0.13" xml:id="UT22084-090-008-32">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-08T08:05:13.437Z" type="translation-status" status="2.b" xml:id="UT22084-090-008-33">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-08T08:05:13.437Z" type="text-version" status="0.0.14" xml:id="UT22084-090-008-34">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
