--- a/translations/kangyur/placeholders/090-009_toh565-the_sovereign_practices_extracted_from_the_tantra_of_mayamarici.xml
+++ b/translations/kangyur/placeholders/090-009_toh565-the_sovereign_practices_extracted_from_the_tantra_of_mayamarici.xml
@@ -9,20 +9,21 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">sgyu ma'i 'od zer can 'byung ba'i rgyud las phyung ba'i rtog pa'i rgyal po/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">māyāmārīcījātatantrād uddhṛtaḥ kalparājo nāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">sgyu ma'i 'od zer can 'byung ba'i rgyud las phyung ba'i rtog pa'i rgyal po zhes bya ba/</title>
-                <author role="translatorMain" xml:id="UT22084-090-009-1"/>
+                <author role="translatorMain" xml:id="UT22084-090-009-1">Dharmachakra Translation Committee</author>
                 <author role="translatorEng" xml:id="UT22084-090-009-2">Adam Krug</author>
                 <consultant role="dharmaMaster" xml:id="UT22084-090-009-3">Chokyi Nyima Rinpoche</consultant>
                 <consultant role="projectManager" xml:id="UT22084-090-009-4">Andreas Doctor</consultant>
                 <editor role="projectEditor" xml:id="UT22084-090-009-5">Nathaniel Rich</editor>
                 <editor role="copyEditor" xml:id="UT22084-090-009-6">Laura Goetz</editor>
+                <editor role="projectEditor" xml:id="UT22084-090-009-33">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.14 <date>2023</date>
+                <edition>v 0.0.16 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-090-009"/>
                 <date/>
             </publicationStmt>
@@ -97,6 +98,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-31T14:03:33.752Z" type="text-version" status="0.0.14" xml:id="UT22084-090-009-26">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-01T08:15:58.71Z" type="text-version" status="0.0.15" xml:id="UT22084-090-009-34">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-08T08:07:07.245Z" type="translation-status" status="2.b" xml:id="UT22084-090-009-35">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-08T08:07:07.245Z" type="text-version" status="0.0.16" xml:id="UT22084-090-009-36">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
